edit footer & font awesome

--- a/index.html
+++ b/index.html
@@ -154,85 +154,91 @@
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<footer class="footer syn-plus">
-				<div class="row">
-					<div class="col-md-3">
-						<div>
-							<a href="#">ABOUT</a>
+			<div class="row">
+				<footer class="footer syn-plus">
+					<!-- <div class="row"> -->
+						<div class="col-md-3">
+							<div>
+								<a href="#">ABOUT</a>
+							</div>
+							<div>
+								<a href="#">Shop</a>
+							</div>
+							<div>
+								<a href="#">Stories</a>
+							</div>
+							<div>
+								<a href="#">Blog</a>
+							</div>
+							<div>
+								<a href="#">About</a>
+							</div>
+							<div>
+								<a href="#">Store Locator</a>
+							</div>
+							<div>
+								<a href="#">Media</a>
+							</div>
 						</div>
-						<div>
-							<a href="#">Shop</a>
+						<div class="col-md-3">
+							<div>
+								<a href="#">SUPPORT</a>
+							</div>
+							<div>
+								<a href="#">Product Care</a>
+							</div>
+							<div>
+								<a href="#">Contact Us</a>
+							</div>
+							<div>
+								<a href="#">Login</a>
+							</div>
 						</div>
-						<div>
-							<a href="#">Stories</a>
+						<div class="col-md-3">
+							<div>
+								<a href="#">SHOP</a>
+							</div>
+							<div>
+								<a href="#">By Product</a>
+							</div>
+							<div>
+								<a href="#">By Color</a>
+							</div>
+							<div>
+								<a href="#">By Story</a>
+							</div>
 						</div>
-						<div>
-							<a href="#">Blog</a>
+						<div class="col-md-3">
+							<div>
+								<a href="#">LEGAL</a>
+							</div>
+							<div>
+								<a href="#">Store/Privacy Policy</a>
+							</div>
 						</div>
-						<div>
-							<a href="#">About</a>
+						<div class="clearfix"></div>
+					<!-- </div> -->
+					<!-- <div class="row"> -->
+						<div class="col-md-6">
+							<p>
+								KEEP UP TO DATE <br>
+								Stay up to date with all the latest news and <br>
+								specil offers from Tulisan
+							</p>
 						</div>
-						<div>
-							<a href="#">Store Locator</a>
+						<div class="col-md-6">
+							<p>
+								<a href="#"><span class="fa fa-3x fa-instagram"> </span></a>
+								<a href="#"><span class="fa fa-3x fa-twitter"> </span></a>
+								<a href="#"><span class="fa fa-3x fa-pinterest-p"> </span></a>
+								<a href="#"><span class="fa fa-3x fa-facebook"> </span></a>
+								<a href="#"><span class="fa fa-3x fa-tumblr"> </span></a>
+							</p>
 						</div>
-						<div>
-							<a href="#">Media</a>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div>
-							<a href="#">SUPPORT</a>
-						</div>
-						<div>
-							<a href="#">Product Care</a>
-						</div>
-						<div>
-							<a href="#">Contact Us</a>
-						</div>
-						<div>
-							<a href="#">Login</a>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div>
-							<a href="#">SHOP</a>
-						</div>
-						<div>
-							<a href="#">By Product</a>
-						</div>
-						<div>
-							<a href="#">By Color</a>
-						</div>
-						<div>
-							<a href="#">By Story</a>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div>
-							<a href="#">LEGAL</a>
-						</div>
-						<div>
-							<a href="#">Store/Privacy Policy</a>
-						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<p>
-							KEEP UP TO DATE <br>
-							Stay up to date with all the latest news and <br>
-							specil offers from Tulisan
-						</p>
-					</div>
-					<div class="col-md-6">
-						<p>
-							<span class="fa fa-instagram"></span>
-						</p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-			</footer>
+						<div class="clearfix"></div>
+					<!-- </div> -->
+				</footer>
+			</div>
 		</div>
 
 
