--- a/index.html
+++ b/index.html
@@ -219,23 +219,32 @@
 						<div class="clearfix"></div>
 					<!-- </div> -->
 					<!-- <div class="row"> -->
-						<div class="col-md-6">
-							<p>
-								KEEP UP TO DATE <br>
-								Stay up to date with all the latest news and <br>
-								specil offers from Tulisan
-							</p>
+					<div class="col-md-12">
+						<div class="sosmed">
+							<div class="row">
+								<div class="col-md-6">
+									<p>
+										KEEP UP TO DATE <br>
+										Stay up to date with all the latest news and <br>
+										specil offers from Tulisan
+									</p>
+								</div>
+								<div class="col-md-6">
+									<p>
+										<a href="#"><span class="fa fa-3x fa-instagram"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-twitter"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-pinterest-p"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-facebook"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-tumblr"> </span></a>
+									</p>
+								</div>
+								<div class="clearfix"></div>
+							</div>
 						</div>
-						<div class="col-md-6">
-							<p>
-								<a href="#"><span class="fa fa-3x fa-instagram"> </span></a>
-								<a href="#"><span class="fa fa-3x fa-twitter"> </span></a>
-								<a href="#"><span class="fa fa-3x fa-pinterest-p"> </span></a>
-								<a href="#"><span class="fa fa-3x fa-facebook"> </span></a>
-								<a href="#"><span class="fa fa-3x fa-tumblr"> </span></a>
-							</p>
-						</div>
-						<div class="clearfix"></div>
+					</div>
+					<div class="col-md-12">
+						<p>Copyright © 2014 Tulisan LLC. All Rights Reserved</p>
+					</div>
 					<!-- </div> -->
 				</footer>
 			</div>
