--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<!-- Standard Meta -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
+		<link rel="icon" type="image/x-icon" href="assets/PICS/TL_Favicon.png">
 		<!-- Site Properities -->
 		<title>Tulisan</title>
 	  
@@ -80,7 +81,7 @@
 				</nav>
 			</header>
 			<div class="row">
-				<div class="col-md-12 syn-plus">
+				<div class="col-md-12 jumbo-tron">
 					<img class="big-image" src="assets/PICS/SAM_0731.jpg">
 				</div>
 				<div class="clearfix"></div>
@@ -157,9 +158,9 @@
 			<div class="row">
 				<footer class="footer syn-plus">
 					<!-- <div class="row"> -->
-						<div class="col-md-3">
+						<div class="col-md-3 short-cut">
 							<div>
-								<a href="#">ABOUT</a>
+								<a href="#"><b>ABOUT</b></a>
 							</div>
 							<div>
 								<a href="#">Shop</a>
@@ -180,9 +181,9 @@
 								<a href="#">Media</a>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 short-cut">
 							<div>
-								<a href="#">SUPPORT</a>
+								<a href="#"><b>SUPPORT</b></a>
 							</div>
 							<div>
 								<a href="#">Product Care</a>
@@ -194,9 +195,9 @@
 								<a href="#">Login</a>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 short-cut">
 							<div>
-								<a href="#">SHOP</a>
+								<a href="#"><b>SHOP</b></a>
 							</div>
 							<div>
 								<a href="#">By Product</a>
@@ -219,7 +220,7 @@
 						<div class="clearfix"></div>
 					<!-- </div> -->
 					<!-- <div class="row"> -->
-					<div class="col-md-12">
+					<div class="col-md-12 syn-plus">
 						<div class="sosmed">
 							<div class="row">
 								<div class="col-md-6">
@@ -234,8 +235,9 @@
 										<a href="#"><span class="fa fa-3x fa-instagram"> </span></a>
 										<a href="#"><span class="fa fa-3x fa-twitter"> </span></a>
 										<a href="#"><span class="fa fa-3x fa-pinterest-p"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-facebook"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-facebook-official"> </span></a>
 										<a href="#"><span class="fa fa-3x fa-tumblr"> </span></a>
+										<a href="#"><span class="fa fa-3x fa-dribbble"> </span></a>
 									</p>
 								</div>
 								<div class="clearfix"></div>
