--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							</div>
 							<div>
 								<p>
-									<b>3 Comment</b>
+									<b class="comment">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -109,7 +109,7 @@
 							</div>
 							<div>
 								<p>
-									<b>3 Comment</b>
+									<b class="comment">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -124,7 +124,7 @@
 							</div>
 							<div>
 								<p>
-									<b>3 Comment</b>
+									<b class="comment">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -139,7 +139,7 @@
 							</div>
 							<div>
 								<p>
-									<b>3 Comment</b>
+									<b class="comment">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -164,7 +164,7 @@
 								<a href="#">Shop</a>
 							</div>
 							<div>
-								<a href="/page/story.html">Stories</a>
+								<a href="./page/story.html">Stories</a>
 							</div>
 							<div>
 								<a href="#">Blog</a>
@@ -223,7 +223,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<p>
-										KEEP UP TO DATE <br>
+										<b>KEEP UP TO DATE</b> <br>
 										Stay up to date with all the latest news and <br>
 										specil offers from Tulisan
 									</p>
