--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								        <li><a href="./page/story.html">STORIES</a></li>
 								        <li><a href="#">BLOG</a></li>
 								        <li><a href="#">VIDEOS</a></li>
-								        <li><a href="#">CHATTER</a></li>
+								        <li><a href="./page/chatter.html">CHATTER</a></li>
 								        <li><a href="#">ABOUT</a></li>
 								        <li><a href="#">CONTACT</a></li>
 								    </ul>
@@ -94,7 +94,7 @@
 							</div>
 							<div>
 								<p>
-									<b class="comment">3 Comment</b>
+									<b class="text-default-color">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -109,7 +109,7 @@
 							</div>
 							<div>
 								<p>
-									<b class="comment">3 Comment</b>
+									<b class="text-default-color">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -124,7 +124,7 @@
 							</div>
 							<div>
 								<p>
-									<b class="comment">3 Comment</b>
+									<b class="text-default-color">3 Comment</b>
 								</p>
 							</div>
 						</div>
@@ -139,7 +139,7 @@
 							</div>
 							<div>
 								<p>
-									<b class="comment">3 Comment</b>
+									<b class="text-default-color">3 Comment</b>
 								</p>
 							</div>
 						</div>
