--- a/index.html
+++ b/index.html
@@ -15,257 +15,69 @@
 	</head>
 	<body>
 		<div class="container">
-			<header>
-				<nav class="navbar navbar-default plain">
-					<div class="row">
-						<div class="container-fluid">
-						    <!-- Brand and toggle get grouped for better mobile display -->
-						    <div class="navbar-header">
-								<!-- <ul class="nav navbar-right"> -->
-							    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-								        <span class="sr-only">Toggle navigation</span>
-								        <span class="icon-bar"></span>
-								        <span class="icon-bar"></span>
-								        <span class="icon-bar"></span>
-							    	</button>
-							    	<div class="navbar-brand hidden-lg hidden-md hidden-sm col-xs-10">
-							    		<img class="smallImg" src="assets/PICS/tulisan.png" />
-							    		<!-- <a href="#" class="navbar-brand">Tulisan</a> -->
-									</div>
-							    <!-- </ul> -->
-						    </div>
+			<header class="parent"></header>
 
-						    <!-- Collect the nav links, forms, and other content for toggling -->
-						    <div class="collapse navbar-collapse plain" id="bs-example-navbar-collapse-1">
-						    	<div class="col-md-12 hidden-xs">
-							    	<div class="col-md-offset-1 col-md-4 syn-center">
-								    	<ul class="navbar-brand syn-centerExt">
-								    		<img src="assets/PICS/tulisan.png" />
-										</ul>
-									</div>
-										<ul class="nav navbar-right syn-right">
-											<!-- <li> -->
-												<a href="#">FIND A STORE</a> |
-												<a href="#">MEDIA</a> |
-												<a href="#"><span class="fa fa-shopping-cart"></span></a> |
-												<a href="#">LOGIN</a>
-											<!-- </li>		 -->
-											<li>
-										    	<form class="navbar-form navbar-right">
-										        	<div class="form-group">
-										        		<input type="text" class="form-control" placeholder="Search">
-										        	</div>
-										        	<button type="submit" class="btn btn-default">SEARCH</button>
-										   		</form>
-											</li>
-										</ul>
-									<div class="clearfix"></div>
-								</div>
-								<div class="col-md-12 syn-center">
-									<ul class="nav navbar-nav syn-centerExt">
-								        <li><a href="#">HOME</a></li>
-								        <li><a href="#">SHOP</a></li>
-								        <li><a href="./page/story.html">STORIES</a></li>
-								        <li><a href="#">BLOG</a></li>
-								        <li><a href="#">VIDEOS</a></li>
-								        <li><a href="./page/chatter.html">CHATTER</a></li>
-								        <li><a href="#">ABOUT</a></li>
-								        <li><a href="#">CONTACT</a></li>
-								    </ul>
-								</div>
-						  	</div>
-					  	</div>
-					</div><!-- /.navbar-collapse -->
-				</nav>
-			</header>
-			<div class="row">
-				<div class="col-md-12 jumbo-tron">
-					<img class="big-image" src="assets/PICS/SAM_0731.jpg">
+			<main class="parent">
+				<div class="row">
+					<div class="col-md-12 jumbo-tron">
+						<img class="big-image" src="assets/PICS/SAM_0731.jpg">
+					</div>
 				</div>
-				<div class="clearfix"></div>
-				<div class="page-article">
-					<div class="col-md-3 margin-top">
-						<div class="picture-box" style="background-image: url('assets/PICS/Illus.jpg');"></div>
-						<div class="margin-top">
-							<div class="article">
-								<p>
-									<b>Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds</b>
-								</p>
-							</div>
-							<div>
-								<p>
-									<b class="text-default-color">3 Comment</b>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 margin-top">
-						<div class="picture-box" style="background-image: url('assets/PICS/73263451_9067.jpg');"></div>
-						<div class="margin-top">
-							<div class="article">
-								<p>
-									<b>Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds</b>
-								</p>
-							</div>
-							<div>
-								<p>
-									<b class="text-default-color">3 Comment</b>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 margin-top">
-						<div class="picture-box" style="background-image: url('assets/PICS/f2d2ce4e_d50e.jpg');"></div>
-						<div class="margin-top">
-							<div class="article">
-								<p>
-									<b>Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds</b>
-								</p>
-							</div>
-							<div>
-								<p>
-									<b class="text-default-color">3 Comment</b>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 margin-top">
-						<div class="picture-box" style="background-image: url('assets/PICS/LB_FW13_15.jpg');"></div>
-						<div class="margin-top">
-							<div class="article">
-								<p>
-									<b>Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds</b>
-								</p>
-							</div>
-							<div>
-								<p>
-									<b class="text-default-color">3 Comment</b>
-								</p>
-							</div>
-						</div>
-					</div>	
-					<div class="clearfix"></div>			
-				</div>				
-			</div>
-			<div class="row">
-				<div class="col-md-12 syn-center syn-plus">
-					<a href="#"><b>MORE ></b></a>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<div id="articles-section">&nbsp;</div>	
+						<div class="clearfix"></div>			
+					</div>				
 				</div>
-				<div class="clearfix"></div>
-			</div>
-			<div class="row">
-				<footer class="footer syn-plus">
-					<!-- <div class="row"> -->
-						<div class="col-md-3 short-cut">
-							<div>
-								<a href="#"><b>ABOUT</b></a>
-							</div>
-							<div>
-								<a href="#">Shop</a>
-							</div>
-							<div>
-								<a href="./page/story.html">Stories</a>
-							</div>
-							<div>
-								<a href="#">Blog</a>
-							</div>
-							<div>
-								<a href="#">About</a>
-							</div>
-							<div>
-								<a href="#">Store Locator</a>
-							</div>
-							<div>
-								<a href="#">Media</a>
-							</div>
-						</div>
-						<div class="col-md-3 short-cut">
-							<div>
-								<a href="#"><b>SUPPORT</b></a>
-							</div>
-							<div>
-								<a href="#">Product Care</a>
-							</div>
-							<div>
-								<a href="#">Contact Us</a>
-							</div>
-							<div>
-								<a href="#">Login</a>
-							</div>
-						</div>
-						<div class="col-md-3 short-cut">
-							<div>
-								<a href="#"><b>SHOP</b></a>
-							</div>
-							<div>
-								<a href="#">By Product</a>
-							</div>
-							<div>
-								<a href="#">By Color</a>
-							</div>
-							<div>
-								<a href="#">By Story</a>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div>
-								<a href="#"><b>LEGAL</b></a>
-							</div>
-							<div>
-								<a href="#">Store/Privacy Policy</a>
-							</div>
-						</div>
-						<div class="clearfix"></div>
-					<!-- </div> -->
-					<!-- <div class="row"> -->
-					<div class="col-md-12 syn-plus">
-						<div class="sosmed">
-							<div class="row">
-								<div class="col-md-6">
-									<p>
-										<b>KEEP UP TO DATE</b> <br>
-										Stay up to date with all the latest news and <br>
-										specil offers from Tulisan
-									</p>
-								</div>
-								<div class="col-md-6">
-									<p>
-										<a href="#"><span class="fa fa-3x fa-instagram"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-twitter"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-pinterest-p"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-facebook-official"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-tumblr"> </span></a>
-										<a href="#"><span class="fa fa-3x fa-dribbble"> </span></a>
-									</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<p>Copyright © 2014 Tulisan LLC. All Rights Reserved</p>
-					</div>
-					<!-- </div> -->
-				</footer>
-			</div>
+			</main>
+					
+			<footer class="parent"></footer>
 		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<!-- Script collection -->
+		<!-- Script collection -->
 		<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>	
+		<script type="text/javascript" src="assets/js/partial.js"></script>	
+
+		<!-- page script -->
+		<script type="text/javascript">
+			// $(function(){
+				articles();
+			// });
+
+			function articles(){
+				var articles = [
+					{"description": "Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds", "comment_counter": "3", "picture": "Illus.jpg"},
+					{"description": "Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds", "comment_counter": "3", "picture": "73263451_9067.jpg"},
+					{"description": "Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds", "comment_counter": "3", "picture": "f2d2ce4e_d50e.jpg"},
+					{"description": "Netflix's 'Abstract: The Art of Design' Will Spotlight the World's Most Creative Minds", "comment_counter": "3", "picture": "LB_FW13_15.jpg"},
+				];
+
+				var html = '<h4 class="sync-center">data not found</h4>';
+
+				if(articles != null && articles.length > 0){
+					html = "";
+					for(var loop=0; loop<articles.length; loop++){
+						html = html +
+						'<div class="col-md-3 article-box">' +
+							'<div class="picture-box" style="background-image: url(assets/PICS/' + articles[loop].picture + ');"></div>' +
+							'<div class="article">' +
+								'<p>' + articles[loop].description + '</p>' +
+								'<p class="counter">' + articles[loop].comment_counter + ' comments</p>' +
+							'</div>' +
+						'</div>';
+
+						
+					}
+
+					html = html + '<div class="col-md-12 more"><a href="#">MORE</a></div>';
+					html = html + '<div class="clearfix"></div>';
+				}
+
+				$("#articles-section").html(html);
+			}
+
+			
+		</script>
 	</body>
 </html>
