--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 div-normalize">
+					<div class="col-md-12 div-normalize">
 						<div id="articles-section">&nbsp;</div>	
 						<div class="clearfix"></div>			
 					</div>				
