--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,9 +15,9 @@
 	</head>
 	<body>
 		<div class="container">
-			<!-- <header class="parent"></header> -->
+			<header class="parent-admin"></header>
 
-			<main class="parent">
+			<main class="parent-admin">
 				
 			</main>
 					
@@ -32,9 +32,7 @@
 		<!-- page script -->
 		<script type="text/javascript">
 		
-	
-
-			
+		
 		</script>
 	</body>
 </html>
