--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,20 +15,16 @@
 		<link href="../assets/css/admin.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
-			<header class="parent-admin"></header>
+		<header class="parent-admin"></header>
 
-			<main class="parent-admin">
+		<main class="parent-admin"></main>
 				
-			</main>
-					
-			<!-- <footer class="parent"></footer> -->
-		</div>
+		<footer class="parent-admin"></footer>
+
 		<!-- Script collection -->
 		<script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
-		<script type="text/javascript" src="../assets/js/partial.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
 
 		<!-- page script -->
@@ -40,54 +36,24 @@
 				var html = '';
 
 				var data = [
-					{
-						name	: 'Achdiyati Sumi',
-						email 	: 'sumiong.ong@gmail.com',
-						company	: 'PT. Sky Aviation',
-						phone 	: '',
-						loca	: '' 
-					},
-					{
-						name	: 'Achdiyati Sumi',
-						email 	: 'sumiong.ong@gmail.com',
-						company	: 'PT. Sky Aviation',
-						phone 	: '',
-						loca	: ''
-					},
-					{
-						name	: 'Achdiyati Sumi',
-						email 	: 'sumiong.ong@gmail.com',
-						company	: 'PT. Sky Aviation',
-						phone 	: '',
-						loca	: ''
-					},
-					{
-						name	: 'Achdiyati Sumi',
-						email 	: 'sumiong.ong@gmail.com',
-						company	: 'PT. Sky Aviation',
-						phone 	: '',
-						loca	: ''
-					},
-					{
-						name	: 'Achdiyati Sumi',
-						email 	: 'sumiong.ong@gmail.com',
-						company	: 'PT. Sky Aviation',
-						phone 	: '',
-						loca	: ''
-					}
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
 				]
 
 				// html = 	'<div class="col-md-offset-3 col-md-9">';
 
 				html = html +
 				'<div class="operation-group">'+
-					'<a href="#"><i class="fa fa-plus-circle">Create Customer</i></a>'+
-					'<a href="#"><i class="fa fa-minus-circle">Delete Customer </i></a>'+
-					'<a href="#"><i class="fa fa-bars">Manage Customer Group</i></a>'+
-					// '<div class="form-group">'+
-					  '<input type="text" placeholder="E mail">'+
-					   '<button class="" value="">Search</button>'+
-					// '</div>'+
+					'<form class="form-inline">' +
+						'<a href="#"><i class="fa fa-plus-circle">Create Customer</i></a>'+
+						'<a href="#"><i class="fa fa-minus-circle">Delete Customer </i></a>'+
+						'<a href="#"><i class="fa fa-bars">Manage Customer Group</i></a>'+
+			        	'<div class="input-group">' +
+			        		'<input type="text" class="form-control" placeholder="Search">' +
+				        	'<span class="input-group-btn">' +
+				        		'<button type="submit" class="btn btn-default">SEARCH</button>' +
+				        	'</span>' +
+			        	'</div>' +
+			   		'</form>' +
 				'</div>';
 
 				html = html +
@@ -133,7 +99,7 @@
 					    			'<td>'+ data[a].email +'</td>'+
 					    			'<td>'+ data[a].company +'</td>'+
 					    			'<td>'+ data[a].phone +'</td>'+
-					    			'<td>'+ data[a].loca +'</td>'+
+					    			'<td>'+ data[a].address +'</td>'+
 					    		'<tr>';
 					    	}
 				html = html +
@@ -143,7 +109,7 @@
 				'</div>';
 
 				// html = html + '</div>';
-				$('.container .main-menu').append(html);
+				$('main.parent-admin .main-content').append(html);
 			}
 			
 		
