--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,11 +15,13 @@
 		<link href="../assets/css/admin.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="parent-admin"></header>
+		<div class="container-fluid">
+			<header class="parent-admin"></header>
 
-		<main class="parent-admin"></main>
-				
-		<footer class="parent-admin"></footer>
+			<main class="parent-admin"></main>
+					
+			<footer class="parent-admin"></footer>
+		</div>
 
 		<!-- Script collection -->
 		<script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
@@ -37,17 +39,31 @@
 
 				var data = [
 					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
+					{ name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
 				]
-
-				// html = 	'<div class="col-md-offset-3 col-md-9">';
 
 				html = html +
 				'<div class="operation-group">'+
 					'<form class="form-inline">' +
-						'<a href="#"><i class="fa fa-plus-circle">Create Customer</i></a>'+
-						'<a href="#"><i class="fa fa-minus-circle">Delete Customer </i></a>'+
-						'<a href="#"><i class="fa fa-bars">Manage Customer Group</i></a>'+
-			        	'<div class="input-group">' +
+						'<div class="input-group">' +
+							'<a href="#"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create Customer</a>'+
+						'</div>' +
+						'<div class="input-group">' +
+							'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Customer</a>'+
+						'</div>' +
+						'<div class="input-group">' +
+							'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Customer Group</a>'+
+						'</div>' +
+			        	'<div class="input-group pull-right">' +
 			        		'<input type="text" class="form-control" placeholder="Search">' +
 				        	'<span class="input-group-btn">' +
 				        		'<button type="submit" class="btn btn-default">SEARCH</button>' +
@@ -57,27 +73,55 @@
 				'</div>';
 
 				html = html +
-				'<div class="col-md-3 col-xs-6">'+
-					'<p>Total number of customers</p>'+
-					'<p class="number">1385</p>'+
-				'</div>'+
-				'<div class="col-md-2 col-xs-3">'+
-					'<p>Registered</p>'+
-					'<p class="number">1350</p>'+
-				'</div>'+
-				'<div class="col-md-1 col-xs-3">'+
-					'<p>Guest</p>'+
-					'<p class="number">35</p>'+
-				'</div>'+
-				'<div class="col-md-6 alpha">'+
-					'<p>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z </p>'+
+				'<div class="summary-group">'+
+					'<div class="summary-text">'+
+						'<p>Total number of customers</p>'+
+						'<p class="number">1385</p>'+
+					'</div>'+
+					'<div class="summary-text">'+
+						'<p>Registered</p>'+
+						'<p class="number">1350</p>'+
+					'</div>'+
+					'<div class="summary-text">'+
+						'<p>Guest</p>'+
+						'<p class="number">35</p>'+
+					'</div>'+
+					'<div class="alpha">'+
+						'<ul>' +
+							'<li><a href="#">A</a></li>'+
+							'<li><a href="#">B</a></li>'+
+							'<li><a href="#">C</a></li>'+
+							'<li><a href="#">D</a></li>'+
+							'<li><a href="#">E</a></li>'+
+							'<li><a href="#">F</a></li>'+
+							'<li><a href="#">G</a></li>'+
+							'<li><a href="#">H</a></li>'+
+							'<li><a href="#">I</a></li>'+
+							'<li><a href="#">J</a></li>'+
+							'<li><a href="#">K</a></li>'+
+							'<li><a href="#">L</a></li>'+
+							'<li><a href="#">M</a></li>'+
+							'<li><a href="#">N</a></li>'+
+							'<li><a href="#">O</a></li>'+
+							'<li><a href="#">P</a></li>'+
+							'<li><a href="#">Q</a></li>'+
+							'<li><a href="#">R</a></li>'+
+							'<li><a href="#">S</a></li>'+
+							'<li><a href="#">T</a></li>'+
+							'<li><a href="#">U</a></li>'+
+							'<li><a href="#">V</a></li>'+
+							'<li><a href="#">W</a></li>'+
+							'<li><a href="#">X</a></li>'+
+							'<li><a href="#">Z</a></li>'+
+						'</ul>'+
+					'</div>'+
 				'</div>'+
 				'<div class="clearfix"></div>';
 
 				html = html +
-				'<div class="table">'+
-					'<p><a href="#">< Previous page</a> | <a href="#">Next page ></a></p>'+
-					'<table class="table table-striped">'+
+				'<div class="table-frame">'+
+					'<p class="pagging-text"><a href="#" class="pagging-left">< Previous page</a> | <a href="#" class="pagging-right">Next page ></a></p>'+
+					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
 						    	'<th></th>'+
@@ -89,23 +133,50 @@
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-					    	for(var a =0; a < data.length; a++){
+					    	for(var loop =0; loop<data.length; loop++){
 					    		html = html +
 					    		'<tr>'+
-					    			'<td>'+
-										'<input type="checkbox" value="'+a+'">'+
-					    			'</td>'+
-					    			'<td>'+ data[a].name +'</td>'+
-					    			'<td>'+ data[a].email +'</td>'+
-					    			'<td>'+ data[a].company +'</td>'+
-					    			'<td>'+ data[a].phone +'</td>'+
-					    			'<td>'+ data[a].address +'</td>'+
-					    		'<tr>';
+					    			'<td><input type="checkbox" value="'+loop+'"></td>'+
+					    			'<td>'+ data[loop].name +'</td>'+
+					    			'<td>'+ data[loop].email +'</td>'+
+					    			'<td>'+ data[loop].company +'</td>'+
+					    			'<td>'+ data[loop].phone +'</td>'+
+					    			'<td>'+ data[loop].address +'</td>'+
+					    		'</tr>';
 					    	}
 				html = html +
 					    '</tbody>'+
 					'</table>'+
-					'<p><a href="#">< Previous page</a> | <a href="#">Next page ></a></p>'+
+					'<p class="pagging-text"><a href="#" class="pagging-left">< Previous page</a> | <a href="#" class="pagging-right">Next page ></a></p>'+
+					'<div class="alpha">'+
+						'<ul>' +
+							'<li><a href="#">A</a></li>'+
+							'<li><a href="#">B</a></li>'+
+							'<li><a href="#">C</a></li>'+
+							'<li><a href="#">D</a></li>'+
+							'<li><a href="#">E</a></li>'+
+							'<li><a href="#">F</a></li>'+
+							'<li><a href="#">G</a></li>'+
+							'<li><a href="#">H</a></li>'+
+							'<li><a href="#">I</a></li>'+
+							'<li><a href="#">J</a></li>'+
+							'<li><a href="#">K</a></li>'+
+							'<li><a href="#">L</a></li>'+
+							'<li><a href="#">M</a></li>'+
+							'<li><a href="#">N</a></li>'+
+							'<li><a href="#">O</a></li>'+
+							'<li><a href="#">P</a></li>'+
+							'<li><a href="#">Q</a></li>'+
+							'<li><a href="#">R</a></li>'+
+							'<li><a href="#">S</a></li>'+
+							'<li><a href="#">T</a></li>'+
+							'<li><a href="#">U</a></li>'+
+							'<li><a href="#">V</a></li>'+
+							'<li><a href="#">W</a></li>'+
+							'<li><a href="#">X</a></li>'+
+							'<li><a href="#">Z</a></li>'+
+						'</ul>'+
+					'</div>'+
 				'</div>';
 
 				// html = html + '</div>';
