--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -55,7 +55,7 @@
 				'<div class="operation-group">'+
 					'<form class="form-inline">' +
 						'<div class="input-group">' +
-							'<a href="#"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create Customer</a>'+
+							'<a href="newCustomer.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create Customer</a>'+
 						'</div>' +
 						'<div class="input-group">' +
 							'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Customer</a>'+
