--- a/admin/cms.html
+++ b/admin/cms.html
@@ -58,12 +58,12 @@
 				]
 
 				var menu = [
-					{ 'title': "HOME", 'link': '#', 'icon': 'home' },
+					{ 'title': "HOME", 'link': 'home.html', 'icon': 'home' },
 					{ 'title': "STORIES", 'link': 'story.html', 'icon': 'pencil' },
-					{ 'title': "BLOG", 'link': '#', 'icon': 'commenting-o' },
+					{ 'title': "BLOG", 'link': 'blog.html', 'icon': 'commenting-o' },
 					{ 'title': "VIDEOS", 'link': 'videos.html', 'icon': 'play' },
 					{ 'title': "CHATTER", 'link': 'chatter.html', 'icon': 'camera' },
-					{ 'title': "SETTINGS", 'link': '#', 'icon': 'gear' },
+					{ 'title': "SETTINGS", 'link': 'setting.html', 'icon': 'gear' },
 				];
 
 				html = html +
