--- a/admin/customer.html
+++ b/admin/customer.html
@@ -82,15 +82,15 @@
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
 							'<p>Total number of customers</p>'+
-							'<p class="number">1385</p>'+
+							'<p class="number">' + data.length + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Registered</p>'+
-							'<p class="number">1350</p>'+
+							'<p class="number">' + data.length + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Guest</p>'+
-							'<p class="number">35</p>'+
+							'<p class="number">0</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
