--- a/admin/videos.html
+++ b/admin/videos.html
@@ -68,7 +68,7 @@
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
 							'<p>Total number of videos</p>'+
-							'<p class="number">1385</p>'+
+							'<p class="number">' + data.length + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
