--- a/admin/departement.html
+++ b/admin/departement.html
@@ -37,38 +37,29 @@
 			function customer(){
 				var html = '';
 
-				var data = [
-					{ customerId: "1", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "2", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "3", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "4", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "5", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "6", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "7", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "8", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "9", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "10", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-					{ customerId: "11", name: 'Achdiyati Sumi', email: 'sumiong.ong@gmail.com', company: 'PT. Sky Aviation', phone: '', address: '' },
-				]
+				var data = 
+				{
+					list : [
+						{ orderNo: "1141", customer: 'Achdiyati Sumi', status: 'Waiting for payment', total: '10000000', orderTime: '2017/10/21 12:00:00' },
+						{ orderNo: "2444", customer: 'Achdiyati Sumi', status: 'Delivered', total: '20500000', orderTime: '2017/10/19 12:00:00' },
+						{ orderNo: "3123", customer: 'Guest', status: 'Paid', total: '3500000', orderTime: '2017/10/13 12:00:00' },
+						{ orderNo: "4123", customer: 'Guest', status: 'Complete', total: '2200000', orderTime: '2017/10/11 12:00:00' },
+						{ orderNo: "5432", customer: 'Guest', status: 'Complete', total: '4150000', orderTime: '2017/10/9 12:00:00' },
+					],
+
+					registered : '2',
+					guest : '3',
+				};
 
 				html = html +
 				'<div class="header-option">' +
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create Customer</a>'+
+								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Order</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Customer</a>'+
-							'</div>' +
-							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Customer</a>'+
+								'<a href="#"><i class="fa fa-check-circle text-warning">&nbsp;</i> Process Order</a>'+
 							'</div>' +
 				        	'<div class="input-group pull-right search-box">' +
 				        		'<input type="text" class="form-control" placeholder="Search">' +
@@ -82,15 +73,15 @@
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
 							'<p>Total number of customers</p>'+
-							'<p class="number">1385</p>'+
+							'<p class="number">' + data.list.length + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Registered</p>'+
-							'<p class="number">1350</p>'+
+							'<p class="number">' + data.registered + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
 							'<p>Guest</p>'+
-							'<p class="number">35</p>'+
+							'<p class="number">' + data.guest + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -130,26 +121,29 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" value="'+loop+'" id="selectRecord' + loop + '" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
-						    	'<th>Name</th>'+
-						        '<th>E mail</th>'+
-						        '<th>Company</th>'+
-						        '<th>Phone</th>'+
-						        '<th>Location</th>'+
+						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
+						    	'<th>Order #</th>'+
+						        '<th>Customer</th>'+
+						        '<th>Status</th>'+
+						        '<th class="text-center">Total</th>'+
+						        '<th class="text-center">Order time</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-					    	for(var loop =0; loop<data.length; loop++){
-					    		html = html +
-					    		'<tr>'+
-					    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].customerId+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-					    			'<td class="syn-nowrap">'+ data[loop].name +'</td>'+
-					    			'<td>'+ data[loop].email +'</td>'+
-					    			'<td class="syn-nowrap">'+ data[loop].company +'</td>'+
-					    			'<td>'+ data[loop].phone +'</td>'+
-					    			'<td>'+ data[loop].address +'</td>'+
-					    		'</tr>';
-					    	}
+
+		    	data = data.list;
+		    	for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].orderNo+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td class="syn-nowrap">'+ data[loop].orderNo +'</td>'+
+		    			'<td>'+ data[loop].customer +'</td>'+
+		    			'<td>'+ data[loop].status +'</td>'+
+		    			'<td class="syn-nowrap text-right">'+ currencyFormat(data[loop].total) +'</td>'+
+		    			'<td class="text-center">'+ timeSince(new Date(Date.parse(data[loop].orderTime))) +'</td>'+
+		    		'</tr>';
+		    	}
+
 				html = html +
 					    '</tbody>'+
 					'</table>'+
