--- a/admin/setting.html
+++ b/admin/setting.html
@@ -32,30 +32,34 @@
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				loadData();
+				customer();
 			});
-			function loadData(){
+			function customer(){
 				var html = '';
-				var subtitle = "The little girl gave Pepe a big hug and said, \"I have been endlessly chasing the horizon, running away from monsters that keep haunting me \"";
-				subtitle = subtitle.substring(0, 100) + '...';
-				var desc = "The Sound of Dawn’, an art project by multi-dimensional artist Melissa Sunjaya, examines the concept of self-love. This sensual prose is about a spiritual awakening to discover bliss and happiness within ourselves. Only through a commitment of loving ourselves wholeheartedly, we can begin to love others unconditionally.</br>We recently sat down with designer Zhijun Wang to discuss his project that turns hyped sneakers into wearable face masks. The Beijing-based creative started his face mask project to comment on the pollution in his city, where citizens are battling extreme air pollution. Understandably, Wang’s mask projects have been met with mixed responses and have created quite a buzz on the internet. In our talk with Wang he notes that he only wishes to make interesting items that no one has made before and that he has no interest in selling his masks. Additionally, we gave a pair of our HYPEBEAST 20th anniversary New Balance 580 “Earth” sneakers to Wang to be made into one of his signature face masks.";
-				desc = desc.substring(0, 100) + '...';
-				var data = [
-					{ storyId: "1", title: 'PEPE AND THE FLYING BALLOON', subtitle: subtitle, description: desc, publishedTime: '2017/10/21 12:00:00', publishedBy: 'admin' },
-				]
+
+				var data = 
+				{
+					list : [
+						{ orderNo: "1141", customer: 'Achdiyati Sumi', status: 'Waiting for payment', total: '10000000', orderTime: '2017/10/21 12:00:00' },
+						{ orderNo: "2444", customer: 'Achdiyati Sumi', status: 'Delivered', total: '20500000', orderTime: '2017/10/19 12:00:00' },
+						{ orderNo: "3123", customer: 'Guest', status: 'Paid', total: '3500000', orderTime: '2017/10/13 12:00:00' },
+						{ orderNo: "4123", customer: 'Guest', status: 'Complete', total: '2200000', orderTime: '2017/10/11 12:00:00' },
+						{ orderNo: "5432", customer: 'Guest', status: 'Complete', total: '4150000', orderTime: '2017/10/9 12:00:00' },
+					],
+
+					registered : '2',
+					guest : '3',
+				};
 
 				html = html +
 				'<div class="header-option">' +
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="newVideo.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Story</a>'+
+								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Order</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Story</a>'+
-							'</div>' +
-							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Story</a>'+
+								'<a href="#"><i class="fa fa-check-circle text-warning">&nbsp;</i> Process Order</a>'+
 							'</div>' +
 				        	'<div class="input-group pull-right search-box">' +
 				        		'<input type="text" class="form-control" placeholder="Search">' +
@@ -68,8 +72,16 @@
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of stories</p>'+
-							'<p class="number">' + data.length + '</p>'+
+							'<p>Total number of customers</p>'+
+							'<p class="number">' + data.list.length + '</p>'+
+						'</div>'+
+						'<div class="summary-text">'+
+							'<p>Registered</p>'+
+							'<p class="number">' + data.registered + '</p>'+
+						'</div>'+
+						'<div class="summary-text">'+
+							'<p>Guest</p>'+
+							'<p class="number">' + data.guest + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -109,26 +121,29 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" value="'+loop+'" id="selectRecord' + loop + '" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
-						        '<th>Title</th>'+
-						        '<th width="25%">Subtitle</th>'+
-						        '<th width="30%">Description</th>'+
-						        '<th>By</th>'+
-						        '<th>Time</th>'+
+						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
+						    	'<th>Order #</th>'+
+						        '<th>Customer</th>'+
+						        '<th>Status</th>'+
+						        '<th class="text-center">Total</th>'+
+						        '<th class="text-center">Order time</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-					    	for(var loop =0; loop<data.length; loop++){
-					    		html = html +
-					    		'<tr>'+
-					    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].storyId+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-					    			'<td>'+ data[loop].title +'</td>'+
-					    			'<td>'+ data[loop].subtitle +'</td>'+
-					    			'<td>'+ data[loop].description +'</td>'+
-					    			'<td class="syn-nowrap">'+ data[loop].publishedBy +'</td>'+
-					    			'<td>'+ timeSince(new Date(Date.parse(data[loop].publishedTime))) +'</td>'+
-					    		'</tr>';
-					    	}
+
+		    	data = data.list;
+		    	for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].orderNo+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td class="syn-nowrap">'+ data[loop].orderNo +'</td>'+
+		    			'<td>'+ data[loop].customer +'</td>'+
+		    			'<td>'+ data[loop].status +'</td>'+
+		    			'<td class="syn-nowrap text-right">'+ currencyFormat(data[loop].total) +'</td>'+
+		    			'<td class="text-center">'+ timeSince(new Date(Date.parse(data[loop].orderTime))) +'</td>'+
+		    		'</tr>';
+		    	}
+
 				html = html +
 					    '</tbody>'+
 					'</table>'+
