--- a/admin/order.html
+++ b/admin/order.html
@@ -121,7 +121,7 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
+						    	'<th width="5%"><input type="checkbox" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
 						    	'<th>Order #</th>'+
 						        '<th>Customer</th>'+
 						        '<th>Status</th>'+
