--- a/admin/product.html
+++ b/admin/product.html
@@ -32,18 +32,20 @@
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				customer();
+				loadData();
 			});
-			function customer(){
+			function loadData(){
 				var html = '';
+				var desc = "The little girl gave Pepe a big hug and said, \"I have been endlessly chasing the horizon, running away from monsters that keep haunting me \"";
+				desc = desc.substring(0, 100) + '...';
 
 				var data = [
-					{ picture: 'db_file_img_133_350x350', name: 'Atelier Box', price: '$77.00'},
-					{ picture: 'db_file_img_539_350x350', name: 'Beach Box', price: '$87.00'},
-					{ picture: 'db_file_img_567_350x350', name: 'City Tote', price: '$87.00'},
-					{ picture: 'db_file_img_785_350x350', name: 'Coterie Bag', price: '$127.00'},
-					{ picture: 'db_file_img_944_350x350', name: 'Cruise Bag', price: '$137.00'},
-					{ picture: 'db_file_img_995_350x350', name: 'Gallery Tote', price: '$87.00'},
+					{ picture: 'db_file_img_133_350x350', productId: 'ABSD', name: 'Atelier Box', description: desc, qty: '123', price: '770000'},
+					{ picture: 'db_file_img_539_350x350', productId: 'SSDA', name: 'Beach Box', description: desc, qty: '22', price: '8700000'},
+					{ picture: 'db_file_img_567_350x350', productId: 'VVXD', name: 'City Tote', description: desc, qty: '34', price: '87000'},
+					{ picture: 'db_file_img_785_350x350', productId: 'FFAD', name: 'Coterie Bag', description: desc, qty: '1', price: '1270000'},
+					{ picture: 'db_file_img_944_350x350', productId: 'WEAS', name: 'Cruise Bag', description: desc, qty: '2', price: '1370000'},
+					{ picture: 'db_file_img_995_350x350', productId: 'QWER', name: 'Gallery Tote', description: desc, qty: '6', price: '870000'},
 				]
 
 				html = html +
@@ -55,6 +57,9 @@
 						'<div class="input-group">' +
 							'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Product</a>'+
 						'</div>' +
+						'<div class="input-group operation-button">' +
+							'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Product</a>'+
+						'</div>' +
 			        	'<div class="input-group pull-right">' +
 			        		'<input type="text" class="form-control" placeholder="Search">' +
 				        	'<span class="input-group-btn">' +
@@ -62,12 +67,13 @@
 				        	'</span>' +
 			        	'</div>' +
 			   		'</form>' +
+			        '<div class="clearfix"></div>' +
 				'</div>';
 				html = html +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of Product</p>'+
-							'<p class="number">355</p>'+
+							'<p>Total number of Products</p>'+
+							'<p class="number">' + data.length + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -105,22 +111,30 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th></th>'+
-						    	'<th><i class="fa fa-picture-o"></i></th>'+
-						        '<th>Name</th>'+
-						        '<th>price</th>'+
+						    	'<th width="5%"><input type="checkbox" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
+						    	'<th width="5%" class="text-center"><i class="fa fa-picture-o"></i></th>'+
+						        '<th width="10%" class="text-center">SKU</th>'+
+						        '<th>Product Name</th>'+
+						        '<th width="30%">Description</th>'+
+						        '<th width="5%" class="text-center">Qty</th>'+
+						        '<th class="text-center">price</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
-					    	for(var loop =0; loop<data.length; loop++){
-					    		html = html +
-					    		'<tr>'+
-					    			'<td width="5%"><input type="checkbox" name="customerSelect" value="'+loop+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-					    			'<td width="5%"><img class="img-product" src="../assets/PICS/'+ data[loop].picture +'.jpg"></td>'+
-					    			'<td>'+ data[loop].name +'</td>'+
-					    			'<td>'+ data[loop].price +'</td>'+
-					    		'</tr>';
-					    	}
+
+		    	for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td width="5%"><input type="checkbox" name="customerSelect" value="'+loop+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td width="5%"><img class="img-product" src="../assets/PICS/'+ data[loop].picture +'.jpg"></td>'+
+		    			'<td class="text-center">'+ data[loop].productId +'</td>'+
+		    			'<td>'+ data[loop].name +'</td>'+
+		    			'<td>'+ data[loop].description +'</td>'+
+		    			'<td class="text-center">'+ data[loop].qty +'</td>'+
+		    			'<td class="text-right">'+ currencyFormat(data[loop].price) +'</td>'+
+		    		'</tr>';
+		    	}
+
 				html = html +
 					    '</tbody>'+
 					'</table>'+
