--- a/admin/setting.html
+++ b/admin/setting.html
@@ -40,15 +40,12 @@
 				var data = 
 				{
 					list : [
-						{ orderNo: "1141", customer: 'Achdiyati Sumi', status: 'Waiting for payment', total: '10000000', orderTime: '2017/10/21 12:00:00' },
-						{ orderNo: "2444", customer: 'Achdiyati Sumi', status: 'Delivered', total: '20500000', orderTime: '2017/10/19 12:00:00' },
-						{ orderNo: "3123", customer: 'Guest', status: 'Paid', total: '3500000', orderTime: '2017/10/13 12:00:00' },
-						{ orderNo: "4123", customer: 'Guest', status: 'Complete', total: '2200000', orderTime: '2017/10/11 12:00:00' },
-						{ orderNo: "5432", customer: 'Guest', status: 'Complete', total: '4150000', orderTime: '2017/10/9 12:00:00' },
+						{ userId: "1", avatar: "pattern3.jpg", name: "Administrator", username: "admin@tulisan.com", type: "admin", departement: "Product" },
+						{ userId: "2", avatar: "pattern2.jpg", name: "Achdiyati Sumi", username: "ach@gmail.com", type: "customer", departement: "" },
 					],
 
-					registered : '2',
-					guest : '3',
+					admin : '1',
+					customer : '1',
 				};
 
 				html = html +
@@ -56,10 +53,13 @@
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Order</a>'+
+								'<a href="#"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Create User</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-check-circle text-warning">&nbsp;</i> Process Order</a>'+
+								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete User</a>'+
+							'</div>' +
+							'<div class="input-group operation-button">' +
+								'<a href="#"><i class="fa fa-bars text-warning">&nbsp;</i> Manage User</a>'+
 							'</div>' +
 				        	'<div class="input-group pull-right search-box">' +
 				        		'<input type="text" class="form-control" placeholder="Search">' +
@@ -72,16 +72,16 @@
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of customers</p>'+
+							'<p>Total number of Users</p>'+
 							'<p class="number">' + data.list.length + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
-							'<p>Registered</p>'+
-							'<p class="number">' + data.registered + '</p>'+
+							'<p>Admins</p>'+
+							'<p class="number">' + data.admin + '</p>'+
 						'</div>'+
 						'<div class="summary-text">'+
-							'<p>Guest</p>'+
-							'<p class="number">' + data.guest + '</p>'+
+							'<p>Customers</p>'+
+							'<p class="number">' + data.customer + '</p>'+
 						'</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
@@ -122,11 +122,11 @@
 					    '<thead>'+
 					    	'<tr>'+
 						    	'<th width="5%"><input type="checkbox" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord' + loop + '"></label></th>'+
-						    	'<th>Order #</th>'+
-						        '<th>Customer</th>'+
-						        '<th>Status</th>'+
-						        '<th class="text-center">Total</th>'+
-						        '<th class="text-center">Order time</th>'+
+						    	'<th width="5%" class="text-center"><span class="fa fa-picture-o"></span></th>'+
+						    	'<th>Name</th>'+
+						        '<th>Username</th>'+
+						        '<th>Type</th>'+
+						        '<th>Departement</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody>';
@@ -135,12 +135,12 @@
 		    	for(var loop =0; loop<data.length; loop++){
 		    		html = html +
 		    		'<tr>'+
-		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].orderNo+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-		    			'<td class="syn-nowrap">'+ data[loop].orderNo +'</td>'+
-		    			'<td>'+ data[loop].customer +'</td>'+
-		    			'<td>'+ data[loop].status +'</td>'+
-		    			'<td class="syn-nowrap text-right">'+ currencyFormat(data[loop].total) +'</td>'+
-		    			'<td class="text-center">'+ timeSince(new Date(Date.parse(data[loop].orderTime))) +'</td>'+
+		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].userId+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
+		    			'<td class="text-center"><img class="img-product" src="../assets/PICS/' + data[loop].avatar + '"></td>'+
+		    			'<td>'+ data[loop].name +'</td>'+
+		    			'<td>'+ data[loop].username +'</td>'+
+		    			'<td>'+ data[loop].type +'</td>'+
+		    			'<td>'+ data[loop].departement +'</td>'+
 		    		'</tr>';
 		    	}
 
